@@ -1,3 +1,8 @@
+Sat May 19 13:46:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed timeout calculation in Symbian scheduler.  Affected
+	  file is lib/silcutil/symbian/silcsymbianscheduler.c.
+
 Fri May 18 21:10:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Do not uninitialize u.m.threads atomic int in finish but in
